unpackaged/main/default/objects/GBLite__GB_Grid_Folder__c/GBLite__GB_Grid_Folder__c.object-meta.xml
<CustomObject>
    <description>Object that holds the grid and folder names</description>
    <label>GB_Grid_Folder</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Custom Object Label Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GB_Grid_Folders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>