unpackaged/main/default/objects/GBLite__GB_Grid_Folder__c/fields/GBLite__Name__c.field-meta.xml
<CustomField>
    <fullName>GBLite__Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>