unpackaged/main/default/objects/GBLite__GB_Grid_Folder__c/fields/GBLite__Type__c.field-meta.xml
<CustomField>
    <fullName>GBLite__Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Type</label>
    <length>2</length>
    <required>true</required>
    <type>Text</type>
</CustomField>