unpackaged/main/default/objects/GBLite__GB_Grid_Folder__c/fields/GBLite__Value__c.field-meta.xml
<CustomField>
    <fullName>GBLite__Value__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Value</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>